config form now starts from Program and App closes if config form closes without any actions

--- a/MikroSRZ104/Forms/ConfigFilesForm.resx
+++ b/MikroSRZ104/Forms/ConfigFilesForm.resx
@@ -124,8 +124,8 @@
     <value>186, 17</value>
   </metadata>
   <data name="label15.Text" xml:space="preserve">
-    <value>Задайте наименование устройств, которое будет отображаться на экране
-мониторинга.
+    <value>Задайте наименование устройств, которое будет отображаться
+на экране мониторинга.
 Названия задаются в соответствие с указанными файлами конфигурации.
 По умолчанию в качестве наименования выступает название 
 файла конфигурации, если хотите его оставить - оставьте поле 
